# Projekt_Inzynierski

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: 01_literature.ipynb  02.1_generowanie obrazów.ipynb  02_generowanie_obrazow.ipynb  CancerNucleus.ipynb  cancer_nucleus.ipynb
src/builders/: image_builder.py
src/data_generation/: center_generators.py  data_generator.py  picture_generator.py  single_cell_generator.py
src/functions/: axes_distribution_functions.py  center_points.py  ellipse.py  ellipse_params.py  points_generator.py  poisson_sampling.py  single_cell_generator.py  test.ipynb
src/models/: encoder.py  encoder_convolutional.py  encoder_convoncional.py
src/utils/: cancer_nucleus.py  cell_settings.py  config.py  healthy_nucleus.py  nuclei.py  poisson_sampling.py  zoom_params.py
src/utils/classes/: cancer_nucleus.py  healthy_nucleus.py  nuclei.py
src/visualization/: visualize_output.py
