[project]
name = "projekt-inzynierski"
version = "0.1.0"
description = "Projekt inżynierski: analiza obrazów i uczenie maszynowe"
authors = [
    {name = "Hubert Kosiorowski",email = "hubert.kosiorowski1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
black = "24.3.0"
flake8 = "7.0.0"
jupyter = "1.0.0"

