
[tool.poetry]
name = "projekt-inzynierski"
version = "0.1.0"
description = "Projekt inżynierski: analiza obrazów i uczenie maszynowe"
authors = ["Hubert Kosiorowski <hubert.kosiorowski1@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
black = "24.3.0"
flake8 = "7.0.0"
jupyter = "1.0.0"

